--- a/300/300.html
+++ b/300/300.html
@@ -8,18 +8,17 @@
 
 <body>
 <img src="300.jpg"> <img src="300Movie.jpg"><br>
-Series: 5 issues 1998, Graphic Novel 1999, Movie 2006<br>
-Publisher: Dark Horse<br>
-Illustrator: Frank Miller<br>
-Writer: Frank Miller
+5 issues in 1998, 1 Graphic Novel in1999 by Dark Horse. 1 Movie in 2006 by Warner Bros
 <p>
-300 is a historically inspired 1998 comic book limited series written and illustrated by Frank Miller with painted colors by Lynn Varley. Each page of the novel is illustrated as a double-page spread. When the series was gathered into hardcover form, the individual pages were twice as wide as a normal comic.
+Written and illustrated by <a href="../FrankMiller/FrankMiller.html">Frank Miller</a>, 300 is a historically inspired 1998 comic book limited series  with painted colors by Lynn Varley. Each page of the novel is illustrated as a double-page spread. When the series was gathered into hardcover form, the individual pages were twice as wide as a normal comic.
 </p><p>
 300 was initially published as a monthly five-issue comic book limited series by Dark Horse Comics, the first issue published in May 1998. The series won three Eisner Awards in 1999: "Best Limited Series", "Best Writer/Artist" for Frank Miller and "Best Colorist" for Lynn Varley. The work was collected as a hardcover volume in 1999.
 </p><p>
 The comic is a fictional retelling of the Battle of Thermopylae and the events leading up to it from the perspective of Leonidas of Sparta. 300 was particularly inspired by the 1962 film The 300 Spartans, a film Miller watched as a young boy. The work was adapted in 2006 to a film of the same name.
 </p><p>
 In 480 BC, King Leonidas of Sparta gathers 300 of his best men to fight the upcoming Persian invasion. In what is likely a suicide mission, they and their allies plan to stop King Xerxes' invasion of Greece at the narrow cliffs of the "Hot Gates" (Thermopylae). The terrain prevents the Greeks from being overwhelmed by Xerxes' superior numbers (a military tactic usually called "defeat in detail").
+</p><p>
+Both the comic and the movie are fictionalized retellings of the Battle of Thermopylae within the Persian Wars. The film was directed by Zack Snyder, while Miller served as executive producer and consultant. It was filmed mostly with a superimposition chroma key technique, to help replicate the imagery of the original comic book.
 </p>
 </body>
 </html>
