--- a/BalladOfHaloJones/BalladOfHaloJones.html
+++ b/BalladOfHaloJones/BalladOfHaloJones.html
@@ -34,7 +34,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The Ballad of Halo Jones is a science fiction comic strip written by Alan Moore and drawn by Ian Gibson, with lettering by Steve Potter (Books 1 & 2) and Richard Starkings (Book 3).
+The Ballad of Halo Jones is a science fiction comic strip written by <a href="../AlanMoore/AlanMoore.html">Alan Moore</a> and drawn by Ian Gibson, with lettering by Steve Potter (Books 1 &amp; 2) and Richard Starkings (Book 3).
 </p><p>
 Halo Jones first appeared July 1984 in five-page instalments in the pages of the weekly British comic 2000 AD and is regarded as one of the high points of 2000 AD. The eponymous heroine is a highly sympathetic 50th-century everywoman, and the tone of the strip ranges from the comic to the poignant. 
 </p><p>
