--- a/FrankMiller/FrankMiller.html
+++ b/FrankMiller/FrankMiller.html
@@ -32,7 +32,13 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Frank Miller (born January 27, 1957) is an American comic book writer, novelist, inker, screenwriter, film director, and producer best known for his comic book stories and graphic novels such as Ronin, Daredevil: Born Again, The Dark Knight Returns, Batman: Year One, Sin City, and 300.
+Frank Miller (born January 27, 1957) is an American comic book writer, novelist, inker, screenwriter, film director, and producer best known for his comic book stories and graphic novels such as:
+<li><a href="../Ronin/Ronin.html">Ronin</a>
+<li><a href="../DaredevilBornAgain/DaredevilBornAgain.html">Daredevil: Born Again</a>
+<li><a href="../BatmanTheDarkKnight/BatmanTheDarkKnight.html">The Dark Knight Returns</a>
+<li><a href="../BatmanYearOne/BatmanYearOne.html">Batman: Year One</a>
+<li><a href="../SinCity/SinCity.html">Sin City</a>
+<li><a href="../300/300.html">300</a>
 </p><p>
 He also directed the film version of The Spirit, shared directing duties with Robert Rodriguez on Sin City and Sin City: A Dame to Kill For, and produced the film 300. His film Sin City earned a Palme d'Or nomination, and he has received every major comic book industry award. In 2015, Miller was inducted into the Will Eisner Award Hall of Fame.
 </p><p>
