--- a/FromHell/FromHell.html
+++ b/FromHell/FromHell.html
@@ -39,7 +39,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-From Hell is a 2001 American slasher film directed by the Hughes brothers and loosely based on the graphic novel From Hell by Alan Moore and Eddie Campbell about the Jack the Ripper murders.
+From Hell is a 2001 American slasher film directed by the Hughes brothers and loosely based on the graphic novel From Hell by <a href="../AlanMoore/AlanMoore.html">Alan Moore</a> and Eddie Campbell about the Jack the Ripper murders.
 </p><p>
 In 1888, Mary Kelly and a small group of London prostitutes trudge through unrelenting daily misery. When their friend Ann Crook is kidnapped, they are drawn into a conspiracy with links to high society. The kidnapping is followed by the gruesome murder of another woman, Martha Tabram; and it becomes apparent that they are being hunted down one by one as prostitutes are murdered and mutilated post-mortem.
 </p><p>
