--- a/SinCity/SinCity.html
+++ b/SinCity/SinCity.html
@@ -12,7 +12,7 @@
 Series: Graphic Novel 1992<br>
 Publisher: Dark Horse<br>
 <p>
-Sin City is a series of neo-noir comics by American comic book writer Frank Miller. The first story originally appeared in Dark Horse Presents Fifth Anniversary Special (April 1991), and continued in Dark Horse Presents #51–62 from May 1991 to June 1992, under the title of Sin City, serialized in thirteen parts. Several other stories of variable lengths have followed. The intertwining stories, with frequently recurring characters, take place in Basin City.
+Sin City is a series of neo-noir comics by American comic book writer <a href="../FrankMiller/FrankMiller.html">Frank Miller</a>. The first story originally appeared in Dark Horse Presents Fifth Anniversary Special (April 1991), and continued in Dark Horse Presents #51–62 from May 1991 to June 1992, under the title of Sin City, serialized in thirteen parts. Several other stories of variable lengths have followed. The intertwining stories, with frequently recurring characters, take place in Basin City.
 </p><p>
 A film adaptation of Sin City, co-directed by Robert Rodriguez and Frank Miller, was released on April 1, 2005. A sequel, Sin City: A Dame To Kill For, was released on August 22, 2014.
 </p><p>
