--- a/SwampThing/SwampThing.html
+++ b/SwampThing/SwampThing.html
@@ -66,7 +66,7 @@ The Swamp Thing is a fictional character and antihero in comic books published b
 </p><p>
 The character first appeared in House of Secrets #92 (July 1971) in a stand-alone horror story set in the early 20th century. The character then returned in a solo series, set in the contemporary world and in the general DC continuity. The character is a swamp monster that resembles an anthropomorphic mound of vegetable matter, and fights to protect its swamp home, the environment in general, and humanity from various supernatural or terrorist threats.
 </p><p>
-Alan Moore takes creative control and creates a new Swamp Thing story beginning with issue #20 "Loose Ends".
+<a href="../AlanMoore/AlanMoore.html">Alan Moore</a> takes creative control and creates a new Swamp Thing story beginning with issue #20 "Loose Ends".
 </p><p>
 Moore reconfigures Swamp Thing's origin to make him a true monster as opposed to a human transformed into a monster. In his first issue, he swept aside most of the supporting cast Pasko had introduced in his year-and-a-half run as writer, and brought the Sunderland Corporation to the forefront, as they hunted Swamp Thing and "killed" him in a hail of bullets. 
 </p><p>
