--- a/VForVendetta/VForVendetta.html
+++ b/VForVendetta/VForVendetta.html
@@ -9,9 +9,7 @@
 
 <body>
 <img src="VForVendetta1.jpg"> <br>
-Series: 10 issues 1988 - 1989<br>
-Publisher: DC<br>
-<p>
+10 issues from 1988 - 1989 by Vertigo (DC)<p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -35,7 +33,9 @@ Publisher: DC<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-V for Vendetta is a 2005 dystopian political thriller film directed by James McTeigue and written by The Wachowski Brothers, based on the 1988 DC/Vertigo Comics limited series of the same name by Alan Moore and David Lloyd. 
+V for Vendetta is a British graphic novel written by <a href="../AlanMoore/AlanMoore.html">Alan Moore</a> and illustrated by David Lloyd (with additional art by Tony Weare). Initially published, starting in 1982, in black-and-white as an ongoing serial in the short-lived UK anthology Warrior, it morphed into a ten-issue limited series published by DC Comics. Subsequent collected editions have been typically published under DC's more specialized imprint, Vertigo.
+</p><p>
+V for Vendetta is also a 2005 dystopian political thriller film directed by James McTeigue and written by The Wachowski Brothers, based on the 1988 DC/Vertigo Comics limited series of the same name by Alan Moore and David Lloyd. 
 </p><p>
 The film is set in an alternative future where a Nordic supremacist and neo-fascist regime has subjugated the United Kingdom. Hugo Weaving portrays V, an anarchist freedom fighter who attempts to ignite a revolution through elaborate terrorist acts, and Natalie Portman plays Evey, a young, working-class woman caught up in V's mission, while Stephen Rea portrays the detective leading a desperate quest to stop V.
 </p><p>
