--- a/index.html
+++ b/index.html
@@ -2174,6 +2174,14 @@
 <td><a href="BatmanVsPredatorIII/BatmanVsPredatorIII.html">Details</a></td>
 </tr>
 
+<br>
+<tr>
+<td>Batman Year One</td>
+<td>1987</td>
+<td>DC</td>
+<td><a href="BatmanYearOne/BatmanYearOne.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Batman/Aliens</td>
 <td>1997</td>
@@ -4358,6 +4366,13 @@
 </tr>
 
 <tr>
+<td>Daredevil Born Again</td>
+<td>1986</td>
+<td>Marvel</td>
+<td><a href="DaredevilBornAgain/DaredevilBornAgain.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daredevil vs. Vapora</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -6136,7 +6151,7 @@
 <tr>
 <td>Fraggle Rock</td>
 <td>1983</td>
-<td>Jim Henson Company</td>
+<td>Jim Henson</td>
 <td><a href="FraggleRock/FraggleRock.html">Details</a></td>
 </tr>
 
@@ -10623,7 +10638,7 @@
 <tr>
 <td>Muppet Show</td>
 <td>1974</td>
-<td>Jim Henson Company</td>
+<td>Jim Henson</td>
 <td><a href="MuppetShow/MuppetShow.html">Details</a></td>
 </tr>
 
@@ -12449,6 +12464,13 @@
 <td>1937</td>
 <td>Creator</td>
 <td><a href="RonCobb/RonCobb.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ronin</td>
+<td>1983</td>
+<td>DC</td>
+<td><a href="Ronin/Ronin.html">Details</a></td>
 </tr>
 
 <tr>
