--- a/BatmanTheKillingJoke/BatmanTheKillingJoke.html
+++ b/BatmanTheKillingJoke/BatmanTheKillingJoke.html
@@ -9,7 +9,7 @@
 <body>
 <img src="BatmanTheKillingJoke.jpg"> <br>
 1 issue 1988 by DC<br>
-Writer: Alan Moore, Illustrator: Brian Bollard
+Writer: <a href="../AlanMoore/AlanMoore.html">Alan Moore</a> Illustrator: <a href="../BrianBolland/BrianBolland.html">Brian Bollard</a>
 <p>
 Batman visits the Joker in Arkham Asylum only to discover he has been replaced by a double. As Batman attempts to track the villain down, the Joker shows up at the house of Commissioner Gordon where he promptly shoots Barbara,  effectively ending her crime fighting career as Batgirl, and captures her father. The Joker takes Jim to a modified carnival where he tries to drive him mad (partially by showing him pictures of his naked and bleeding daughter). Batman arrives and starts beating on the Joker who attempts to reason with him in his own insane fashion. As things wrap up and the police arrive, the Joker finally tells Batman a joke that he gets.
 </p>
