--- a/AlWilliamson/AlWilliamson.html
+++ b/AlWilliamson/AlWilliamson.html
@@ -22,13 +22,23 @@
 <div class="mySlides" style="text-align: center;"><img src="AlWilliamsonArt02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlWilliamsonArt03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AlWilliamsonArt04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlWilliamsonArt05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlWilliamsonArt06.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
 <p>
-Alfonso "Al" Williamson (March 21, 1931 – June 12, 2010) was an American cartoonist, comic book artist and illustrator specializing in adventure, Western and science-fiction/fantasy.
+Alfonso "Al" Williamson (March 21, 1931 – June 12, 2010) was an American cartoonist, comic book artist and illustrator specializing in adventure, Western and science-fiction/fantasy. His most notable works include:
+</p><p>
+<li><a href="../WeirdScience/WeirdScience.html">Weird Science</a>
+<li><a href="../WeirdFantasy/WeirdFantasy.html">Weird Fantasy</a>
+<li><a href="../FlashGordon/FlashGordon.html">Flash Gordon</a>
+<li><a href="../Creepy/Creepy.html">Creepy</a>
+<li><a href="../Eerie/Eerie.html">Eerie</a>
+<li><a href="../SecretAgentX9/SecretAgentX9.html">Secret Agent X-9</a>
+<li><a href="../StarWars/StarWars.html">Star Wars</a>
 </p><p>
 Born in New York City, he spent much of his early childhood in Bogotá, Colombia before moving back to the United States at the age of 12. In his youth, Williamson developed an interest in comic strips, particularly Alex Raymond's Flash Gordon. He took art classes at Burne Hogarth's Cartoonists and Illustrators School, there befriending future cartoonists Wally Wood and Roy Krenkel, who introduced him to the work of illustrators who had influenced adventure strips. Before long, he was working professionally in the comics industry. His most notable works include his science-fiction/heroic fantasy art for EC Comics in the 1950s, on titles including Weird Science and Weird Fantasy.
 </p><p>
