--- a/PunkMagazine/PunkMagazine.html
+++ b/PunkMagazine/PunkMagazine.html
@@ -48,7 +48,7 @@ Punk published 15 issues between 1976 and 1979, as well as a special issue in 19
 </p><p>
 Punk was a vehicle for examining the underground music scene in New York, and primarily for punk rock as found in clubs like CBGB, Zeppz, and Max's Kansas City. It mixed Mad Magazine-style cartooning by Holmstrom, Bobby London and a young Peter Bagge with the more straightforward pop journalism of the kind found in Creem. It also provided an outlet for female writers, artists and photographers who had been shut out of a male-dominated underground publishing scene.
 </p><p>
-Punk magazine was home to (many of whom were being published for the first time) writers Mary Harron, Steve Taylor, Lester Bangs, Pam Brown, artists Buz Vaultz, Anya Phillips, and Screaming Mad George, and photographers Bob Gruen, Barak Berkowitz, Roberta Bayley and David Godlis. After Dunn left in early 1977 and McNeil quit shortly afterwards, Bruce Carleton (art director, 1977–1979), Ken Weiner (contributor, 1977–79), and Elin Wilder, one of few African Americans involved in the early CBGB/punk rock scene, were added to the staff.
+Punk magazine was home to artist <a href="../PeterBagge/PeterBagge.html">Peter Bagge</a>, writers Mary Harron, Steve Taylor, Lester Bangs, Pam Brown, artists Buz Vaultz, Anya Phillips, and Screaming Mad George, and photographers Bob Gruen, Barak Berkowitz, Roberta Bayley and David Godlis. After Dunn left in early 1977 and McNeil quit shortly afterwards, Bruce Carleton (art director, 1977–1979), Ken Weiner (contributor, 1977–79), and Elin Wilder, one of few African Americans involved in the early CBGB/punk rock scene, were added to the staff.
 </p><p>
 Punk was briefly revived in 2007.
 </p>
