--- a/NeatStuff/NeatStuff.html
+++ b/NeatStuff/NeatStuff.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="NeatStuff1.jpg"> <br>
-
+15 issues 1985 - 1994 by Fantagraphics
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -21,7 +21,19 @@
 
 <div class="mySlides" style="text-align: center;"><img src="NeatStuff1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NeatStuff2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NeatStuff6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NeatStuff15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -33,5 +45,6 @@ Described by Dez Skinn in Comix: The Underground Revolution as the work which "t
 </p><p>
 Neat Stuff's contents were collected in four books: The Bradleys, Studs Kirby, Junior and Other Losers, and Stupid Comics. Fantagraphics reprinted all fifteen issues in 2016 in a two-volume hardcover collection.
 </p>
+
 </body>
 </html>
