--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 <img src="kb.jpg" title="Creativity" style="float: left" hspace="10">
 <b>Media</b><br>
-<a href="revenue.html">Media Franchises</a><br>
-<a href="MediaCompanies.html">Media Companies</a>
-
+a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
+<a href="revenue.html">Top Franchises</a> <a href="MediaCompanies.html">Top Companies</a>
 <table id="myTable" class="tablesorter">
 <thead>
 <tr>
@@ -10871,6 +10870,13 @@
 <td>1941</td>
 <td>Creator</td>
 <td><a href="NealAdams/NealAdams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Neat Stuff</td>
+<td>1941</td>
+<td>Fantagraphics</td>
+<td><a href="NeatStuff/NeatStuff.html">Details</a></td>
 </tr>
 
 <tr>
