--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
 
 <img src="kb.jpg" title="Creativity" style="float: left" hspace="10">
-<b>Media</b><br>
-a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
-<a href="revenue.html">Top Franchises</a> <a href="MediaCompanies.html">Top Companies</a>
+<b>Media</b> &nbsp; <a href="#a">a</a> <a href="#b">b</a> <a href="#c">c</a> <a href="#d">d</a> <a href="#e">e</a> <a href="#f">f</a> 
+<a href="#g">g</a> <a href="#h">h</a> <a href="#i">i</a> <a href="#j">j</a> <a href="#k">k</a> <a href="#l">l</a> 
+<a href="#m">m</a> <a href="#n">n</a> <a href="#o">o</a> <a href="#p">p</a> 
+<a href="#q">q</a> <a href="#r">r</a> <a href="#s">s</a> <a href="#t">t</a> <a href="#u">u</a> <a href="#v">v</a> 
+<a href="#w">w</a> <a href="#x">x</a> <a href="#y">y</a> <a href="#z">z</a><br>
+<a href="revenue.html">Top Franchises</a> &nbsp; <a href="MediaCompanies.html">Top Companies</a>
 <table id="myTable" class="tablesorter">
 <thead>
 <tr>
@@ -294,7 +297,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>A Boy and His Dog</td>
+<td><a name ="a">A Boy and His Dog</td>
 <td>1975</td>
 <td>LQ/JAF</td>
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
@@ -1956,7 +1959,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>B.P.R.D.</td>
+<td><a name ="b">B.P.R.D.</td>
 <td>2002</td>
 <td>Dark Horse</td>
 <td><a href="BPRD/BPRD.html">Details</a></td>
@@ -3112,7 +3115,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Cable </td>
+<td><a name ="c">Cable </td>
 <td>1993 </td>
 <td>Marvel </td>
 <td><a href="Cable/Cable.html">Details</a></td>
@@ -4260,7 +4263,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>DC vs. Marvel</td>
+<td><a name ="d">DC vs. Marvel</td>
 <td>1996</td>
 <td>DC</td>
 <td><a href="MarvelVsDC/MarvelVsDC.html">Details</a></td>
@@ -5339,7 +5342,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Earth X</td>
+<td><a name ="e">Earth X</td>
 <td>1999</td>
 <td>Marvel</td>
 <td><a href="EarthX/EarthX.html">Details</a></td>
@@ -5741,7 +5744,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Fables</td>
+<td><a name ="f">Fables</td>
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="Fables/Fables.html">Details</a></td>
@@ -6323,7 +6326,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>G.I. Joe</td>
+<td><a name ="g">G.I. Joe</td>
 <td>1985</td>
 <td>Hasbro</td>
 <td><a href="GIJoe/GIJoe.html">Details</a></td>
@@ -6994,7 +6997,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 <td><a href="GustavKlimt/GustavKlimt.html">Details</a></td>
 
 <tr>
-<td>H.G. Wells' War of Worlds</td>
+<td><a name ="h">H.G. Wells' War of Worlds</td>
 <td>2006</td>
 <td>Dark Horse</td>
 <td><a href="HGWWOTW/HGWWOTW.html">Details</a></td>
@@ -7624,7 +7627,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>I Hate Fairyland</td>
+<td><a name ="i">I Hate Fairyland</td>
 <td>2015</td>
 <td>Image</td>
 <td><a href="IHateFairyland/IHateFairyland.html">Details</a></td>
@@ -8080,7 +8083,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>J2 Son of Juggernaut</td>
+<td><a name ="j">J2 Son of Juggernaut</td>
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="J2/J2.html">Details</a></td>
@@ -8472,7 +8475,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Ka-Zar</td>
+<td><a name ="k">Ka-Zar</td>
 <td>1936</td>
 <td>Marvel</td>
 <td><a href="KaZar/KaZar.html">Details</a></td>
@@ -8787,7 +8790,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>L.B. Cole</td>
+<td><a name ="l">L.B. Cole</td>
 <td>1918</td>
 <td>Creator</td>
 <td><a href="LBCole/LBCole.html">Details</a></td>
@@ -9298,7 +9301,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Machine Man</td>
+<td><a name ="m">Machine Man</td>
 <td>1978</td>
 <td>Marvel</td>
 <td><a href="MachineMan/MachineMan.html">Details</a></td>
@@ -10803,7 +10806,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Nam</td>
+<td><a name ="n">Nam</td>
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Nam/Nam.html">Details</a></td>
@@ -11265,7 +11268,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Offcastes</td>
+<td><a name ="o">Offcastes</td>
 <td>1993</td>
 <td>Epic</td>
 <td><a href="Offcastes/Offcastes.html">Details</a></td>
@@ -11475,7 +11478,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>P Craig Russell</td>
+<td><a name ="p">P Craig Russell</td>
 <td>1951</td>
 <td>Creator</td>
 <td><a href="PCraigRussell/PCraigRussell.html">Details</a></td>
@@ -12018,7 +12021,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Quasar</td>
+<td><a name ="q">Quasar</td>
 <td>1989</td>
 <td>Marvel</td>
 <td><a href="Quasar/Quasar.html">Details</a></td>
@@ -12053,7 +12056,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>R.I.P.D.</td>
+<td><a name ="r">R.I.P.D.</td>
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="RIPD/RIPD.html">Details</a></td>
@@ -12536,7 +12539,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>S.H.I.E.L.D.</td>
+<td><a name ="s">S.H.I.E.L.D.</td>
 <td>2010</td>
 <td>Marvel</td>
 <td><a href="SHIELD/SHIELD.html">Details</a></td>
@@ -14188,7 +14191,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Taarna</td>
+<td><a name ="t">Taarna</td>
 <td>2018</td>
 <td>HeavyMetal</td>
 <td><a href="Taarna/Taarna.html">Details</a></td>
@@ -14811,7 +14814,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>U.S. Agent</td>
+<td><a name ="u">U.S. Agent</td>
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="USAgent/USAgent.html">Details</a></td>
@@ -15021,7 +15024,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>V for Vendetta</td>
+<td><a name ="v">V for Vendetta</td>
 <td>1982</td>
 <td>Vertigo</td>
 <td><a href="VForVendetta/VForVendetta.html">Details</a></td>
@@ -15204,7 +15207,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Walking Dead</td>
+<td><a name ="w">Walking Dead</td>
 <td>2006</td>
 <td>Image</td>
 <td><a href="WalkingDead/WalkingDead.html">Details</a></td>
@@ -15869,7 +15872,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>X One Shot to the Head</td>
+<td><a name ="x">X One Shot to the Head</td>
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="XOneShotToTheHead/XOneShotToTheHead.html">Details</a></td>
@@ -15939,7 +15942,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Y The Last Man</td>
+<td><a name ="y">Y The Last Man</td>
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="YTheLastMan/YTheLastMan.html">Details</a></td>
@@ -16072,7 +16075,7 @@ a b c d e f g h i j k l m n o p q r s t u v w x y z<br>
 </tr>
 
 <tr>
-<td>Zap</td>
+<td><a name ="z">Zap</td>
 <td>1968</td>
 <td>Apex Novelty</td>
 <td><a href="Zap/zap.html">Details</a></td>
