--- a/BarryWindsorSmith/BarryWindsorSmith.html
+++ b/BarryWindsorSmith/BarryWindsorSmith.html
@@ -29,7 +29,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Barry Windsor-Smith (born Barry Smith, 25 May 1949) is a British comic book illustrator and painter whose best known work has been produced in the United States. He is known for his work on Marvel Comics' Conan the Barbarian from 1970 to 1973, and for his work on Wolverine, particularly the original Weapon X story arc.
+Barry Windsor-Smith (born Barry Smith, 25 May 1949) is a British comic book illustrator and painter whose best known work has been produced in the United States. He is known for his work on Marvel Comics' <a href="../ConanTheBarbarian/ConanTheBarbarian.html">Conan the Barbarian</a> from 1970 to 1973, and for his work on Wolverine, particularly the original <a href="../WeaponX/WeaponX.html">Weapon X</a> story arc.
 </p><p>
 Barry continued to work at a distance for Marvel, providing the art for a number of stories in the horror anthology titles Tower of Shadows and Chamber of Darkness. Thomas, a long-time fan of Robert E. Howard's 1930 pulp-fiction character Conan the Barbarian, had Windsor-Smith provide art for a sword and sorcery story, "Starr the Slayer", in Chamber of Darkness No. 4 (April 1970). 
 </p><p>
