--- a/ConanTheBarbarian/ConanTheBarbarian.html
+++ b/ConanTheBarbarian/ConanTheBarbarian.html
@@ -124,7 +124,7 @@
 </div>
 
 </p><p>
-Conan is a fictional character based on Robert E. Howard's Conan the Barbarian. He was introduced to the comic book world in 1970 with Conan the Barbarian, written by Roy Thomas, illustrated by Barry Smith and published by Marvel Comics.
+Conan is a fictional character based on Robert E. Howard's Conan the Barbarian. He was introduced to the comic book world in 1970 with Conan the Barbarian, written by Roy Thomas, illustrated by <a href="../BarryWindsorSmith/BarryWindsorSmith.html">Barry Smith</a> and published by Marvel Comics.
 </p><p>
 The highly successful Conan the Barbarian series spawned the more adult, black-and-white Savage Sword of Conan in 1974 (published as part of Marvel's line of black-and-white magazines). Written by Thomas with most art by John Buscema or Alfredo Alcala, Savage Sword of Conan soon became one of the most popular comic series of the 1970s and is now considered a cult classic.
 </p><p>
