--- a/MarvelCP/MarvelCP.html
+++ b/MarvelCP/MarvelCP.html
@@ -2,21 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Marvel Comics Presents</title>
 </head>
 
 <body>
-Marvel Comics Presents<br>
 <img src="MarvelCP1.jpg"> <br>
-Series: 175 issues 1998-1995, 12 issues 2007-2008<br>
-Publisher: Marvel<br>
+175 issues from 1988 to 1995, 12 issues 2007-2008 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP76.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP79.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP82.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP83.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarvelCP84.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Marvel Comics Presents was an American comic book anthology series published by Marvel Comics originally from 1988 to 1995; it returned for a second volume in 2007-2008.
 </p><p>
 The first volume was released on a biweekly basis and lasted for 175 issues. Each issue had four eight-page stories, of which generally two were episodes in ongoing serials and two were one-episode stories. The one-episode stories generally featured obscure or little-seen characters from the Marvel universe, and often featured work by creators previously unpublished in the comics field, including Scott Lobdell (later X-Men Writer) who started work under the editorship of Tom DeFalco.
 </p><p>
-The original plan was for the lead story to feature different members of the X-Men in solo adventures lasting between eight and ten episodes. The first ten issues featured Wolverine; others featured were Colossus, Cyclops, Havok, and Excalibur. From issue 39 onwards, Wolverine was featured in the series until issue #121, when the character was phased out of the series. Particularly notable was "Weapon X" in issues #72-84, which revealed Wolverine's origin, with story and art by Barry Windsor-Smith.
+The original plan was for the lead story to feature different members of the X-Men in solo adventures lasting between eight and ten episodes. The first ten issues featured Wolverine; others featured were Colossus, Cyclops, Havok, and Excalibur. From issue 39 onwards, Wolverine was featured in the series until issue #121, when the character was phased out of the series. Particularly notable was "Weapon X" in issues #72-84, which revealed Wolverine's origin, with story and art by <a href="../BarryWindsorSmith/BarryWindsorSmith.html">Barry Windsor-Smith</a>.
 </p><p>
 Later Ghost Rider was added to the series as "co-lead" feature, and the book adopted a "flip-book" format, thereby allowing each of the two characters cover billing. Eventually other characters, such as Man-Thing and Lunatik, got cover billing.
 </p><p>
