--- a/WeaponX/WeaponX.html
+++ b/WeaponX/WeaponX.html
@@ -9,12 +9,11 @@
 
 <body>
 <img src="WeaponX.jpg"> <br>
-Series: 1995<br>
-Publisher: Marvel<br>
+1991 (#72-84 Marvel Comics Presents), 1993 TPB by Marvel
 <p>
 Weapon X is a fictional clandestine government genetic research facility project appearing in American comic books published by Marvel Comics. They are conducted by the Canadian Government's Department K, which turns willing and unwilling beings into living weapons. The project often captures mutants and does experiments on them to enhance their abilities or superpowers, turning them into weapons. They also mutate baseline humans. The Weapon X Project produced Wolverine, Leech, Deadpool, and Sabretooth.
 </p><p>
-Experiment X, or the brutal adamantium-skeletal bonding process, written by Barry Windsor-Smith in his classic story "Weapon X" (originally published in Marvel Comics Presents #72-84 in 1991), was eventually revealed as part of the "Weapon X Project." Grant Morrison's New X-Men in 2002 further revealed that Weapon X was the tenth of a series of such projects, collectively known as the Weapon Plus Program, and the X in "Weapon X" referred not (or not exclusively) to the letter X, but to the Roman numeral for the number 10. The first project, Weapon I, pertained to the Super Soldier Project that created Captain America.
+Experiment X, or the brutal adamantium-skeletal bonding process, written by <a href="../BarryWindsorSmith/BarryWindsorSmith.html">Barry Windsor-Smith</a> in his classic story "Weapon X" (originally published in <a href="../MarvelCP/MarvelCP.html">Marvel Comics Presents</a> #72-84 in 1991), was eventually revealed as part of the "Weapon X Project." Grant Morrison's New X-Men in 2002 further revealed that Weapon X was the tenth of a series of such projects, collectively known as the Weapon Plus Program, and the X in "Weapon X" referred not (or not exclusively) to the letter X, but to the Roman numeral for the number 10. The first project, Weapon 1, pertained to the Super Soldier Project that created Captain America.
 </p>
 </body>
 </html>
