--- a/AlanMoore/AlanMoore.html
+++ b/AlanMoore/AlanMoore.html
@@ -40,6 +40,7 @@ Alan Moore (born 18 November 1953) is an English writer known primarily for his 
 <li><a href="../SwampThing/SwampThing.html">Swamp Thing</a>
 <li><a href="..//BatmanTheKillingJoke/BatmanTheKillingJoke.html">Batman: The Killing Joke</a>
 <li><a href="../FromHell/FromHell.html">From Hell</a>
+<li><a href="../Promethea/Promethea.html">Promethea</a>
 </p><p>
 Regarded by some as the best comics writer in the English language, he is widely recognized among his peers and critics. He has occasionally used such pseudonyms as Curt Vile, Jill de Ray, and Translucia Baboon; also, reprints of some of his work have been credited to The Original Writer when Moore requested that his name be removed.
 </p><p>
