--- a/Promethea/Promethea.html
+++ b/Promethea/Promethea.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 <img src="Promethea.jpg"><br>
-Writer: Alan Moore<br>
-Illustrators: J. H. Williams III, Mick Gray<br>
-Series: (#1-32) 1999-2005, 5 Graphic Novel collections.<br>
-Publisher: America's Best (DC)<br>
+Writer: <a href="../AlanMoore/Alanmoore.html">Alan Moore</a><br>
+Illustrators: <a href="../JHWilliams/JHWilliams.html">J. H. Williams III</a>, Mick Gray<br>
+32 issues from 1999-2005, 5 TPB in 2005 by America's Best (DC)
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
