--- a/index.html
+++ b/index.html
@@ -8090,7 +8090,14 @@
 </tr>
 
 <tr>
-<td><a name ="j">J2 Son of Juggernaut</td>
+<td><a name ="j">J.H. Williams III</td>
+<td>1965</td>
+<td>Creator</td>
+<td><a href="JHWilliams/JHWilliams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>J2 Son of Juggernaut</td>
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="J2/J2.html">Details</a></td>
