--- a/NealAdams/NealAdams.html
+++ b/NealAdams/NealAdams.html
@@ -28,6 +28,11 @@
 <div class="mySlides" style="text-align: center;"><img src="NealAdams07.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NealAdams08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NealAdams09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NealAdams10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NealAdams11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NealAdams12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NealAdams13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NealAdams14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
