--- a/JHWilliams/JHWilliams.html
+++ b/JHWilliams/JHWilliams.html
@@ -26,10 +26,10 @@
 </div></div>
 </p><p>
 James H. Williams III (born 1965), usually credited as J. H. Williams III, is an American comics artist and penciller. He is known for his work on titles such as:
-<li>Chase
+<li><a href="../Chase/Chase.html">Chase</a>
 <li><a href="../Promethea/Promethea.html">Promethea</a>
-<li>Desolation Jones
-<li>Batwoman
+<li><a href="../DesolationJones/DesolationJones.html">Desolation Jones</a>
+<li><a href="../Batwoman/Batwoman.html">Batwoman</a>
 <li>The Sandman: Overture
 </p><p>
 Interior work
