--- a/index.html
+++ b/index.html
@@ -2269,6 +2269,13 @@
 </tr>
 
 <tr>
+<td>Batwoman</td>
+<td>1993</td>
+<td>DC</td>
+<td><a href="Batwoman/Batwoman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beano</td>
 <td>1938</td>
 <td>DC Thompson</td>
@@ -3483,6 +3490,13 @@
 <td>1982</td>
 <td>Last Gasp</td>
 <td><a href="Cherry/Cherry.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chase</td>
+<td>1998</td>
+<td>DC</td>
+<td><a href="Chase/Chase.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4855,6 +4869,13 @@
 <td>2018</td>
 <td>Image</td>
 <td><a href="Descender/Descender.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Desolation Jones</td>
+<td>2005</td>
+<td>DC</td>
+<td><a href="DesolationJones/DesolationJones.html">Details</a></td>
 </tr>
 
 <tr>
