--- a/Sandman/Sandman.html
+++ b/Sandman/Sandman.html
@@ -9,9 +9,8 @@
 
 <body>
 <img src="Sandman.jpg"> <br>
-Creator: Neil Gaiman<br>
-Series: 75 issues 1989-1996<br>
-Publisher: Vertigo (DC)<br>
+Creator: <a href="../NeilGaiman/NeilGaiman.html">Neil Gaiman</a><br>
+75 issues from 1989-1996 by Vertigo (DC)
 <p>
 
 <div class="row"><div class="column">
