--- a/index.html
+++ b/index.html
@@ -13806,6 +13806,13 @@
 </tr>
 
 <tr>
+<td>Stardust</td>
+<td>1997</td>
+<td>Vertigo</td>
+<td><a href="Stardust/Stardust.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Starjammers</td>
 <td>1995</td>
 <td>Marvel</td>
