--- a/NeilGaiman/NeilGaiman.html
+++ b/NeilGaiman/NeilGaiman.html
@@ -20,7 +20,7 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="NeilGaiman01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="https://blzim.github.io/kb/Creation/Sandman/Sandman001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Sandman/Sandman001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NeilGaiman02.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NeilGaiman03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NeilGaiman04.jpg"></div>
@@ -33,7 +33,13 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Neil Richard MacKinnon Gaiman(November 1960) is an English author of short fiction, novels, comic books, graphic novels, nonfiction, audio theatre, and films. His works include the comic book series The Sandman and novels Stardust, American Gods, Coraline, and The Graveyard Book. 
+Neil Richard MacKinnon Gaiman(November 1960) is an English author of short fiction, novels, comic books, graphic novels, nonfiction, audio theatre, and films. His works include:
+<li><a href="../Sandman/Sandman.html">The Sandman</a>
+<li>Stardust
+<li>American Gods
+<li>Coraline
+<li>The Graveyard Book
+<li><a href="../SandmanOverture/SandmanOverture.html">The Sandman: Overture</a>
 </p><p>
 He has won numerous awards, including the Hugo, Nebula, and Bram Stoker awards, as well as the Newbery and Carnegie medals. He is the first author to win both the Newbery and the Carnegie medals for the same work, The Graveyard Book (2008). In 2013, The Ocean at the End of the Lane was voted Book of the Year in the British National Book Awards.
 </p>
